Fixed Header spacing and positioning

--- a/_patterns/header-footer/header-footer.css
+++ b/_patterns/header-footer/header-footer.css
@@ -1,6 +1,7 @@
 header {
-  background-color: var(--color-tertiary);
+  background-color: transparent;
 }
+
 
 footer {
   background-color: var(--color-accent-dark);
